fix: font ,errboundray

--- a/abrnoc-interview-task/src/components/common/Header.css
+++ b/abrnoc-interview-task/src/components/common/Header.css
@@ -154,6 +154,18 @@
   color: #475569;
 }
 
+.header,
+.header__container,
+.header__left,
+.header__logo,
+.header__title-container,
+.header__title,
+.header__right,
+.header__cart,
+.header__cart-text {
+  font-family: 'Dana', sans-serif !important;
+}
+
 /* Responsive Design */
 @media (max-width: 768px) {
   .header__container {
